Updated Czech translation to reflect latest changes

--- a/content/translation/neutral-heroes/czech.json
+++ b/content/translation/neutral-heroes/czech.json
@@ -1,33 +1,31 @@
 {
 	"creatures.neutral-heroes.nhHalfling.name.plural" : "Skauti",
 	"creatures.neutral-heroes.nhHalfling.name.singular" : "Skaut",
-	"spell.neutral-heroes.summonStoneGolem.name" : "Přivolat kamenné golemy",
-	"spell.neutral-heroes.summonIronGolem.name" : "Přivolat železné golemy",
 	"hero.neutral-heroes.ernest.biography" : "Ernest byl dlouholetým respektovaným členem své komunity. Kdykoli nastaly potíže a válka, Ernest byl obvykle první, kdo sehnal farmáře, aby bránili své domovy, a proměnil je v sílu, na kterou by každý prostý člověk byl hrdý.",
 	"hero.neutral-heroes.ernest.name" : "Ernest",
 	"hero.neutral-heroes.ernest.specialty.description" : "Po dosažení 5. úrovně zvyšuje útočnou a obrannou sílu farmářů. Dále poskytuje království každý den extra 350 zlatých.",
 	"hero.neutral-heroes.ernest.specialty.name" : "Farmáři/Zlato",
 	"hero.neutral-heroes.ernest.specialty.tooltip" : "Specializace: Farmáři, Zlato",
-	"hero.neutral-heroes.hota_heroes.amron.biography" : "Železní golemové obvykle žijí osamoceně ve svých dílnách. Amron je často navštěvuje, i když jen aby je namazal. To dělá železní golemy pod jeho velením ještě nebezpečnějšími.",
-	"hero.neutral-heroes.hota_heroes.amron.name" : "Amron",
-	"hero.neutral-heroes.hota_heroes.amron.specialty.description" : "Přeměňuje Železné muže na Ocelové muže, kterým poskytuje 100% odolnost vůči kouzelným útokům. Navíc poskytuje království každý den extra 2 rudu.",
-	"hero.neutral-heroes.hota_heroes.amron.specialty.name" : "Oceloví muži/Ruda",
-	"hero.neutral-heroes.hota_heroes.amron.specialty.tooltip" : "Specializace: Oceloví muži, Ruda",
-	"hero.neutral-heroes.hota_heroes.azirus.biography" : "Azirus je mocný a ušlechtilý satyr, jehož hudba se zdá, že neuklidňuje divoká zvířata, ale místo toho odhaluje divoké bojové schopnosti jeho satyrských následovníků.",
-	"hero.neutral-heroes.hota_heroes.azirus.name" : "Azirus",
-	"hero.neutral-heroes.hota_heroes.azirus.specialty.description" : "Po dosažení 4. úrovně zvyšuje útočnou a obrannou sílu satyrů. Dále poskytuje království každý den extra 250 zlatých, 1 dřevo a 1 rudu.",
-	"hero.neutral-heroes.hota_heroes.azirus.specialty.name" : "Satyrové/Základní zdroje",
-	"hero.neutral-heroes.hota_heroes.azirus.specialty.tooltip" : "Specializace: Satyrové, Zlato, Dřevo, Ruda",
-	"hero.neutral-heroes.hota_heroes.godfrey.biography" : "Štěstí bylo od narození úzce spjato s Pixies. Každých pár let se narodí Pixie s mimořádným požehnáním. Godfrey sám neví úplně, proč jeho lidé mohou pod jeho vlivem vstát z popela jako fénix. Vysvětluje to... štěstím!",
-	"hero.neutral-heroes.hota_heroes.godfrey.name" : "Godfrey",
-	"hero.neutral-heroes.hota_heroes.godfrey.specialty.description" : "Všechny Pixies pod jeho vedením získávají schopnost znovuzrození jako fénix. Navíc každý den poskytuje království 1 další křišťál.",
-	"hero.neutral-heroes.hota_heroes.godfrey.specialty.name" : "Víly/Křišťál",
-	"hero.neutral-heroes.hota_heroes.godfrey.specialty.tooltip" : "Specialita: Víly, Křišťál",
-	"hero.neutral-heroes.hota_heroes.oukranos.biography" : "Oukranos je fascinující vůdce, jehož ovládané Succubi vykazují neochvějnou loajalitu. I když někteří tvrdí, že otročil jejich vůli, Succubi prohlašují, že ho následují z vlastní svobodné vůle.",
-	"hero.neutral-heroes.hota_heroes.oukranos.name" : "Oukranos",
-	"hero.neutral-heroes.hota_heroes.oukranos.specialty.description" : "Po dosažení 5. úrovně zvyšuje útočnou a obrannou sílu Succubi a poskytuje všem Succubi ve své armádě schopnost neodpovídání na útoky. Používá kouzlo Sireny vždy na maximální účinek.",
-	"hero.neutral-heroes.hota_heroes.oukranos.specialty.name" : "Succubi/Sireny",
-	"hero.neutral-heroes.hota_heroes.oukranos.specialty.tooltip" : "Specialita: Succubi, Sireny",
+	"hero.neutral-heroes.hotaneutralheroes.amron.biography" : "Železní golemové obvykle žijí osamoceně ve svých dílnách. Amron je často navštěvuje, i když jen aby je namazal. To dělá železní golemy pod jeho velením ještě nebezpečnějšími.",
+	"hero.neutral-heroes.hotaneutralheroes.amron.name" : "Amron",
+	"hero.neutral-heroes.hotaneutralheroes.amron.specialty.description" : "Přeměňuje Železné muže na Ocelové muže, kterým poskytuje 100% odolnost vůči kouzelným útokům. Navíc poskytuje království denně 2 ks kamene.",
+	"hero.neutral-heroes.hotaneutralheroes.amron.specialty.name" : "Oceloví muži\nKamení",
+	"hero.neutral-heroes.hotaneutralheroes.amron.specialty.tooltip" : "Specializace: Oceloví muži, kamení",
+	"hero.neutral-heroes.hotaneutralheroes.azirus.biography" : "Azirus je mocný a ušlechtilý satyr, jehož hudba se zdá, že neuklidňuje divoká zvířata, ale místo toho odhaluje divoké bojové schopnosti jeho satyrských následovníků.",
+	"hero.neutral-heroes.hotaneutralheroes.azirus.name" : "Azirus",
+	"hero.neutral-heroes.hotaneutralheroes.azirus.specialty.description" : "Po dosažení 4. úrovně zvyšuje útočnou a obrannou sílu satyrů. Dále poskytuje království každý den extra 250 zlatých, 1 dřevo a 1 rudu.",
+	"hero.neutral-heroes.hotaneutralheroes.azirus.specialty.name" : "Satyrové/Základní zdroje",
+	"hero.neutral-heroes.hotaneutralheroes.azirus.specialty.tooltip" : "Specializace: Satyrové, Zlato, Dřevo, Kamení",
+	"hero.neutral-heroes.hotaneutralheroes.godfrey.biography" : "Štěstí bylo od narození úzce spjato se Skřítky. Každých pár let se narodí Skřítek s mimořádným požehnáním. Godfrey sám neví úplně, proč jeho lidé mohou pod jeho vlivem vstát z popela jako fénix. Vysvětluje to... štěstím!",
+	"hero.neutral-heroes.hotaneutralheroes.godfrey.name" : "Godfrey",
+	"hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.description" : "Všechny Pixies pod jeho vedením získávají schopnost znovuzrození jako fénix. Navíc každý den poskytuje království 1 další křišťál.",
+	"hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.name" : "Víly/Křišťál",
+	"hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.tooltip" : "Specialita: Víly, Křišťál",
+	"hero.neutral-heroes.hotaneutralheroes.oukranos.biography" : "Oukranos je fascinující vůdce, jehož ovládané Succubi vykazují neochvějnou loajalitu. I když někteří tvrdí, že otročil jejich vůli, Succubi prohlašují, že ho následují z vlastní svobodné vůle.",
+	"hero.neutral-heroes.hotaneutralheroes.oukranos.name" : "Oukranos",
+	"hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.description" : "Po dosažení 5. úrovně zvyšuje útočnou a obrannou sílu Succubi a poskytuje všem Succubi ve své armádě schopnost neodpovídání na útoky. Používá kouzlo Sireny vždy na maximální účinek.",
+	"hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.name" : "Succubi/Sireny",
+	"hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.tooltip" : "Specialita: Succubi, Sireny",
 	"hero.neutral-heroes.kharnus.biography" : "Ačkoliv byl Kharnus vždy v opozici vůči rytířům, obdivoval je. Zjistil, že tito ušlechtilí rytíři jsou tak inspirující, že strávil mnoho let jejich studiem a pak do značné míry přetrénoval svou jednotku divokých jezdců na prasatech. Nyní jeho 'Divoká brigáda' může konkurovat jakékoli jednotce jezdectva a získala si upřímný respekt mnoha generálů.",
 	"hero.neutral-heroes.kharnus.name" : "Kharnus",
 	"hero.neutral-heroes.kharnus.specialty.description" : "Po dosažení 2. úrovně zvyšuje útočnou a obrannou sílu divokých prasat a všechna divoká prasata pod jeho velením získávají schopnost nabíjení. Dále poskytuje království každý den extra 1 dřevo a 1 kámen.",
@@ -53,36 +51,6 @@
 	"hero.neutral-heroes.romires.specialty.description": "Zvyšuje útok Nomádů o +1 a umožňuje jim útok dvakrát. Každý den poskytuje království jednu další drahokam.",
 	"hero.neutral-heroes.romires.specialty.name": "Nomádi/ Drahokam",
 	"hero.neutral-heroes.romires.specialty.tooltip": "Specializace: Nomádi, Drahokam",
-	"hero.neutral-heroes.xanthus.biography": "Xanthus se narodil v hněvu bohů a pro své téměř nadpřirozené schopnosti vést společníky do boje je nazýván 'Král golemů'. Zdá se, že dokáže neustále z řídkého vzduchu volat své vojáky.",
-	"hero.neutral-heroes.xanthus.name": "Xanthus",
-	"hero.neutral-heroes.xanthus.specialty.description": "Může vyvolat železné golemy ze zemřelých zlatých golemů a kamenné golemy ze zemřelých diamantových golemů. Poskytuje království každý den 350 zlatých navíc.",
-	"hero.neutral-heroes.xanthus.specialty.name": "Golemové/ Zlato",
-	"hero.neutral-heroes.xanthus.specialty.tooltip": "Specializace: Golemové, Zlato",
-	"hero.neutral-heroes.zarantiri.biography": "Zarantiri je mocná mumie, prý stvořená samotnými bohy, která způsobila vážné zkázy ve světě a stala se agentem chaosu. Zarantiri má štěstí, že může dávat rozkazy ostatním mumiím a s účinnými kletbami zasahuje své nepřátele.",
-	"hero.neutral-heroes.zarantiri.name": "Zarantiri",
-	"hero.neutral-heroes.zarantiri.specialty.description": "Po dosažení 3. úrovně zvyšuje útok a obranu mumií. Při použití kouzla Kletba obdarovaná tělem se účinnost výrazně zvýší, ale záleží také na rozdílu mezi úrovní hrdiny a cílovou úrovní (čím nižší úroveň cíle, tím lepší účinek).",
-	"hero.neutral-heroes.zarantiri.specialty.name": "Mumie/ Kletba obdarovaná tělem",
-	"hero.neutral-heroes.zarantiri.specialty.tooltip": "Specializace: Mumie, Kletba obdarovaná tělem",
-	"hero.neutral-heroes.hotaneutralheroes.amron.biography": "Oceloví lidé obvykle žijí sami ve svých alchymistických laboratořích. Amron často navštěvuje toto místo, i když jen aby je promazal. Tato zkušenost dělá ocelové lidi pod jeho velením ještě nebezpečnějšími.",
-	"hero.neutral-heroes.hotaneutralheroes.amron.name": "Amron",
-	"hero.neutral-heroes.hotaneutralheroes.amron.specialty.description": "{Oceloví lidé}\r\n\r\nMůže povýšit železné golemy na ocelové golemy; oceloví golemové pod Amronovým velením mají 100% odolnost proti magickému poškození. Amron navíc poskytuje království každý den 2 rudy navíc.",
-	"hero.neutral-heroes.hotaneutralheroes.amron.specialty.name": "Oceloví lidé/ Ruda",
-	"hero.neutral-heroes.hotaneutralheroes.amron.specialty.tooltip": "Specializace: Oceloví lidé, Ruda",
-	"hero.neutral-heroes.hotaneutralheroes.azirus.biography": "Azirus je mocný a ušlechtilý satyr, jeho hudba zdá se, že má za cíl spíše vyvolat divoké bojové dovednosti jeho satyrských následovníků, než aby upokojila divokou zvěř.",
-	"hero.neutral-heroes.hotaneutralheroes.azirus.name": "Azirus",
-	"hero.neutral-heroes.hotaneutralheroes.azirus.specialty.description": "{Satyrové}\r\n\r\nPo dosažení 4. úrovně zvyšuje útok a obranu satyrů. Azirus navíc každý den království poskytuje 250 zlatých, 1 dřevo a 1 rudu navíc.",
-	"hero.neutral-heroes.hotaneutralheroes.azirus.specialty.name": "Satyrové/ Zdroje",
-	"hero.neutral-heroes.hotaneutralheroes.azirus.specialty.tooltip": "Specializace: Satyrové, Zlato, Dřevo, Ruda",
-	"hero.neutral-heroes.hotaneutralheroes.godfrey.biography": "Od narození je Godfrey pevně spojen s trpaslíky. Každých pár let se narodí trpaslík s výjimečným požehnáním. Sám Godfrey ne úplně chápe, proč jeho společenstvo může pod jeho vlivem vzkřísit jako Fénix z popela. Vysvětluje to jako... štěstí!",
-	"hero.neutral-heroes.hotaneutralheroes.godfrey.name": "Godfrey",
-	"hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.description": "{Trpaslíci}\r\n\r\nVšechny trpaslíky pod Godfreyovým velením získají schopnost vzkříšení jako Fénix z popela. Godfrey navíc každý den království poskytuje 1 rudu navíc.",
-	"hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.name": "Trpaslíci/ Křišťál",
-	"hero.neutral-heroes.hotaneutralheroes.godfrey.specialty.tooltip": "Specializace: Trpaslíci, Křišťál",
-	"hero.neutral-heroes.hotaneutralheroes.oukranos.biography": "Oukranos je okouzlující vůdce, který vede armádu duší nárožníků s nezlomnou oddaností. Ačkoli někteří tvrdí, že ovládá mysl duší nárožníků, nárožníci tvrdí, že ho následují z vlastní svobodné vůle.",
-	"hero.neutral-heroes.hotaneutralheroes.oukranos.name": "Oukranos",
-	"hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.description": "{Duše nárožníků}\r\n\r\nKaždých 5 úrovní zvyšuje rychlost nárožníků o 5 % a vedení nárožníků nezpůsobuje odvetné útoky. Oukranos vždy vrhá zaklínadla Očarování s vysokým účinkem.",
-	"hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.name": "Duše nárožníků/ Očarování",
-	"hero.neutral-heroes.hotaneutralheroes.oukranos.specialty.tooltip": "Specializace: Duše nárožníků, Očarování",
 	"hero.neutral-heroes.wogneutralheroes.cristian.biography": "Cristian je označován jako 'Generál ledu a ohně'. Prý se jeho lukostřelci pod jeho velením osvědčují jak v chladných severních krajích, tak v žhavých sopečných oblastech.",
 	"hero.neutral-heroes.wogneutralheroes.cristian.name": "Cristian",
 	"hero.neutral-heroes.wogneutralheroes.cristian.specialty.description": "{Polární lukostřelci}\r\n\r\nCristian může přeměnit polární lukostřelce na lávové lukostřelce a naopak. Kromě toho poskytuje Cristian každý den království 1 rtuť navíc.",
@@ -138,6 +106,18 @@
 	"hero.neutral-heroes.wogneutralheroes.unrish.specialty.description": "{Posel prvků}\r\n\r\nUnrish může povýšit posla prvků na jinou jednotku. Kromě toho každý den poskytuje království Unrish dodatečný kámen.",
 	"hero.neutral-heroes.wogneutralheroes.unrish.specialty.name": "Posel prvků/ Kámen",
 	"hero.neutral-heroes.wogneutralheroes.unrish.specialty.tooltip": "Specializace: Posel prvků, Kámen",
+	"hero.neutral-heroes.xanthus.biography": "Xanthus se narodil v hněvu bohů a pro své téměř nadpřirozené schopnosti vést společníky do boje je nazýván 'Král golemů'. Zdá se, že dokáže neustále z řídkého vzduchu volat své vojáky.",
+	"hero.neutral-heroes.xanthus.name": "Xanthus",
+	"hero.neutral-heroes.xanthus.specialty.description": "Může vyvolat železné golemy ze zemřelých zlatých golemů a kamenné golemy ze zemřelých diamantových golemů. Poskytuje království denně +350 zlatých navíc.",
+	"hero.neutral-heroes.xanthus.specialty.name": "Golemové\nZlato",
+	"hero.neutral-heroes.xanthus.specialty.tooltip": "Specializace: Golemové, Zlato",
+	"hero.neutral-heroes.zarantiri.biography": "Zarantiri je mocná mumie, prý stvořená samotnými bohy, která způsobila vážné zkázy ve světě a stala se agentem chaosu. Zarantiri má štěstí, že může dávat rozkazy ostatním mumiím a s účinnými kletbami zasahuje své nepřátele.",
+	"hero.neutral-heroes.zarantiri.name": "Zarantiri",
+	"hero.neutral-heroes.zarantiri.specialty.description": "Po dosažení 3. úrovně zvyšuje útok a obranu mumií. Při použití kouzla Kletba obdarovaná tělem se účinnost výrazně zvýší, ale záleží také na rozdílu mezi úrovní hrdiny a cílovou úrovní (čím nižší úroveň cíle, tím lepší účinek).",
+	"hero.neutral-heroes.zarantiri.specialty.name": "Mumie/ Kletba obdarovaná tělem",
+	"hero.neutral-heroes.zarantiri.specialty.tooltip": "Specializace: Mumie, Kletba obdarovaná tělem",
 	"heroClass.neutral-heroes.drifterF.name" : "Tulačka",
-	"heroClass.neutral-heroes.drifterM.name" : "Tulák"
+	"heroClass.neutral-heroes.drifterM.name" : "Tulák",
+	"spell.neutral-heroes.summonIronGolem.name" : "Přivolat železné golemy",
+	"spell.neutral-heroes.summonStoneGolem.name" : "Přivolat kamenné golemy"
 }
